<resources>
    <string name="app_name">360 Energy Safety App</string>
    <string name="first_day_on_site">First Day On Site</string>
    <string name="post_project">Post Project</string>
    <string name="throughout_project">Throughout Project</string>
    <string name="pre_planning_office">Pre-Planning (Office)</string>
    <string name="pre_planning_field">Pre-planning (Field)</string>
    <string name="select_task">Select Task</string>
    <string name="login">Login</string>
    <string name="print">Print</string>
    <string name="explore_the_documents_in_this_category">Explore the documents in this category</string>
    <string name="gas_monitor_bump_test">Gas Monitor Bump Test</string>
    <string name="atv_ohv_inspection">ATV/OHV Inspection</string>
    <string name="field_level_hazard">Field Level Hazard</string>
    <string name="notice_of_prime_contractor_wellsite_supervisor">Notice of Prime Contractor Wellsite Supervisor</string>
    <string name="worksite_emergency_response_plan">Worksite Emergency Response Plan</string>
    <string name="vehicle_safety_kit_checklist">Vehicle Safety Kit Checklist</string>
    <string name="fire_explosion_prevention_control_plan">Fire Explosion Prevention Control Plan</string>
    <string name="pre_trip_inspection">Pre Trip Inspection</string>
    <string name="pre_planning_field_level">Pre Planning Field Level</string>
</resources>